--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+:root {
+  --blue: #0f2d55;
+  --black: #000000;
+  --white: #ffffff;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -10,24 +16,96 @@
 
 body {
   padding: 50px 0;
+  font-size: 14px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+
 .container {
   width: 1000px;
   height: 700px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
   border-radius: 20px;
   border: 2px solid #80808093;
 }
 
 .container .profile {
   width: 100%;
-  height: 400px;
-  background: #708090;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.blue {
+  width: 24%;
+  height: 100%;
+  background: var(--blue);
+}
+
+.content {
+  width: 76%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.profile .title {
+  color: var(--blue);
+}
+
+.profile .title h2 {
+  font-weight: 800;
+}
+
+.profile .title {
+  font-weight: 600;
+}
+
+.profile .contacts {
+  width: 70%;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.profile .contacts .contact {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.profile .contacts .contact i {
+  font-size: 0.7em;
+  width: 25px;
+  height: 25px;
+  color: var(--white);
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background: var(--blue);
+}
+
+.profile .contacts .contact a {
+  margin: 0 5px;
+}
+
+.profile .description p span {
+  font-weight: 700;
 }
